# kindle-dashboard

./: .gitignore  README.md  pyproject.toml
.claude/skills/create-widget/: SKILL.md
app/: config_store.py  deps.py  error_image.py  main.py  render.py  secrets.py  state.py  theme.py  zones.py
app/routes/: editor.py  render.py  tap.py
app/static/: editor.js
app/templates/: _widget_form.html  dashboard.html  editor.html  widget_preview.html  zoom.html
app/templates/widgets/: calendar.html  clock.html  grafana.html  iobroker.html  weather.html
app/widgets/: __init__.py  base.py  calendar.py  clock.py  grafana.py  iobroker.py  weather.py
config/: secrets.json.example
config/dashboards/: example.json
deploy/: kindledashboard.service
docs/superpowers/plans/: 2026-05-20-kindle-client-touch.md  2026-05-20-kindle-dashboard.md  2026-05-21-weather-widget-refinement.md
docs/superpowers/specs/: 2026-05-20-kindle-client-touch-design.md  2026-05-20-kindle-dashboard-design.md  2026-05-21-weather-widget-refinement-design.md
kindle_client/: Makefile  README.md  config.example.conf  go.mod
kindle_client/cmd/kindled/: main.go
kindle_client/kual_extension/: config.xml  menu.json
tests/: conftest.py  test_config_store.py  test_error_image.py  test_render.py  test_render_zoom.py  test_routes_editor.py  test_routes_render.py  test_routes_tap.py  test_secrets.py  test_state.py  test_theme.py  test_zones.py
tests/fixtures/: example_dashboard.json
tests/widgets/: test_calendar.py  test_clock.py  test_grafana.py  test_iobroker.py  test_weather.py
(+8 files in other folders)
